tcp-egress-gateway/busybox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "no-injection"
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: no-injection
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
