tcp-egress-gateway/rabbitmq-egress-gateway-notls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: catalog-demo
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 5672
      name: tls
      protocol: TLS
    tls:
      mode: ISTIO_MUTUAL
    hosts:
    - ip-192-168-57-87.us-east-2.compute.internal
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rabbitmq
  namespace: catalog-demo
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: rabbitmq
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: ip-192-168-57-87.us-east-2.compute.internal
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-rabbitmq-through-egress-gateway
  namespace: catalog-demo
spec:
  hosts:
  - ip-192-168-57-87.us-east-2.compute.internal
  gateways:
  - mesh
  - istio-egressgateway
  tcp:
  - match:
    - gateways:
      - mesh
      port: 5672
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: rabbitmq
        port:
          number: 5672
  - match:
    - gateways:
      - istio-egressgateway
      port: 5672
    route:
    - destination:
        host: ip-192-168-57-87.us-east-2.compute.internal
        port:
          number: 5672
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rabbitmq
  namespace: catalog-demo
spec:
  hosts:
  - ip-192-168-57-87.us-east-2.compute.internal
  ports:
  - number: 5672
    name: tcp
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
