tcp-egress-gateway/stripe-egress-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stripe-egressgateway
  namespace: ecommerce
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - api.stripe.com
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-stripe
  namespace: ecommerce
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: stripe
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: ip-192-168-75-212.us-east-2.compute.internal
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-stripe-through-egress-gateway
  namespace: ecommerce
spec:
  hosts:
  - api.stripe.com
  gateways:
  - mesh
  - stripe-egressgateway
  http:
  - match:
    - gateways:
      - mesh
      port: 443
      #sniHosts:
      #- api.stripe.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: stripe
        port:
          number: 443
  - match:
    - gateways:
      - stripe-egressgateway
      port: 443
      #sniHosts:
      #- api.stripe.com
    route:
    - destination:
        host: api.stripe.com
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: stripe
  namespace: ecommerce
spec:
  hosts:
  - api.stripe.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
