tcp-egress-gateway/allow-payment-sa-to-stripe-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-sa-to-stripe
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-egressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["ecommerce"]
    to:
    - operation:
        hosts: ["api.stripe.com"]
