tcp-egress-gateway/payment-sa-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-sa-to-rabbitmq
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-egressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ecommerce/sa/payment-sa"]
        namespaces: ["ecommerce"]
    when:
    - key: connection.sni
      values:
      - "ip-192-168-75-212.us-east-2.compute.internal"
      - "api.stripe.com"
